--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ fetch('https://layer.bicyclesharing.net/map/v1/nyc/stations').then(res => {
   urlTextArea.placeholder = 'Provide google maps url which includes latitudes and longitudes';
   document.body.appendChild(urlTextArea);
 
-  const submitButton = document.createelement('button');
+  const submitButton = document.createElement('button');
   submitButton.onclick = () => {
     const { value } = urlTextArea;
     urlTextArea.parentNode.removeChild(urlTextArea);
